implement instagram and population services to use real data from instagram

--- a/.env.sample
+++ b/.env.sample
@@ -15,3 +15,7 @@ DATABASE_HOST='localhost'
 DATABASE_PORT='7687'
 # This property is optional and defaults to the 'neo4j' database.
 DATABASE_NAME='neo4j'
+
+# Instagram credentials
+INSTAGRAM_USERNAME=''
+INSTAGRAM_PASSWORD=''
